atualizacao 7.0 - adicao de paginas de projetos de design grafico, ajustes no index, ajustes na sobre, divisao por areas de projetos e  ajustes de css gerais

--- a/basedesignsystem.html
+++ b/basedesignsystem.html
@@ -64,29 +64,29 @@
             </div>
             
             <div class="p-proj-sobre cor-3">
-                <h1 fadeInDown data-anime="600">Estilo de Letras</h1>
-                <p fadeInDown data-anime="700">A Tipografia usada no Windows será o <span class="cor-p1">Inter</span>. Como existem variações de sistemas operacionais, foram escolhidas variações para cada Sistema Operacional. No IOS, foi escolhida a <span class="cor-p1">Helvetica Nue</span>. No Android, a <span class="cor-p1">Roboto</span>. Já no Linux, a letra padrão, sem serifa.</p>
-                <p fadeInDown data-anime="800">Os tamanhos de fonte, seguem a escala de espaçamento de <span class="cor-p1">4x4</span>, com ajustes de pesos de fonte, de acordo com a necessidade.</p>
-                <img src="./img/14-design system/3 - Tipografia 1.jpg" alt="Tipografia">
+                <h1 fadeInDown data-anime="1000">Estilo de Letras</h1>
+                <p fadeInDown data-anime="1100">A Tipografia usada no Windows será o <span class="cor-p1">Inter</span>. Como existem variações de sistemas operacionais, foram escolhidas variações para cada Sistema Operacional. No IOS, foi escolhida a <span class="cor-p1">Helvetica Nue</span>. No Android, a <span class="cor-p1">Roboto</span>. Já no Linux, a letra padrão, sem serifa.</p>
+                <p fadeInDown data-anime="1200">Os tamanhos de fonte, seguem a escala de espaçamento de <span class="cor-p1">4x4</span>, com ajustes de pesos de fonte, de acordo com a necessidade.</p>
+                <img fadeInDown data-anime="1200" src="./img/14-design system/3 - Tipografia 1.jpg" alt="Tipografia">
             </div>
 
             <div class="p-proj-sobre cor-3">
-                <h1 fadeInDown data-anime="600">Paleta de Cores</h1>
-                <p fadeInDown data-anime="700">O Design System, tem uma paleta de cinzas com <span class="cor-p1">12 cores</span>, variando do branco ao preto.</p>
-                <p fadeInDown data-anime="800">As cores base são compostas por 6 tons, <span class="cor-p1">laranja, azul, amarelo, verde, azul escuro e vermelho</span>. A cor primária vai se dividir em 6 tons de <span class="cor-p1">laranja</span>. A secundária será <span class="cor-p1">azul</span>, que será dividida em 6 tons também. Para informações, será usado o <span class="cor-p1">verde</span>. Para erro, <span class="cor-p1">o vermelho</span>. Para informações, o <span class="cor-p1">azul escuro</span> e para tons de alerta, o <span class="cor-p1">amarelo.</span></p>
-                <img fadeInDown data-anime="900" src="./img/14-design system/4-cores 1.jpg" alt="Cores">
+                <h1 fadeInDown data-anime="1300">Paleta de Cores</h1>
+                <p fadeInDown data-anime="1400">O Design System, tem uma paleta de cinzas com <span class="cor-p1">12 cores</span>, variando do branco ao preto.</p>
+                <p fadeInDown data-anime="1500">As cores base são compostas por 6 tons, <span class="cor-p1">laranja, azul, amarelo, verde, azul escuro e vermelho</span>. A cor primária vai se dividir em 6 tons de <span class="cor-p1">laranja</span>. A secundária será <span class="cor-p1">azul</span>, que será dividida em 6 tons também. Para informações, será usado o <span class="cor-p1">verde</span>. Para erro, <span class="cor-p1">o vermelho</span>. Para informações, o <span class="cor-p1">azul escuro</span> e para tons de alerta, o <span class="cor-p1">amarelo.</span></p>
+                <img fadeInDown data-anime="1600" src="./img/14-design system/4-cores 1.jpg" alt="Cores">
             </div>
 
             <div class="p-proj-sobre cor-3">
-                <h1 fadeInDown data-anime="600">Símbolos</h1>
-                <p fadeInDown data-anime="700">Possui vários ícones, divididos em <span class="cor-p1">31 categorias</span>, sendo algumas delas, Dinheiro, Vídeo e Imagem, Localização, Usuários, Pesquisa, Clima, entre outros. Foi baseada no pacote de ícones do <span class="cor-p1">Iconify Twotone</span>, baseado no <span class="cor-p1">Google Material Design.</span></p>
-                <img fadeInDown data-anime="800" src="./img/14-design system/5-icones 1.jpg" alt="icones">
+                <h1 fadeInDown data-anime="1700">Símbolos</h1>
+                <p fadeInDown data-anime="1800">Possui vários ícones, divididos em <span class="cor-p1">31 categorias</span>, sendo algumas delas, Dinheiro, Vídeo e Imagem, Localização, Usuários, Pesquisa, Clima, entre outros. Foi baseada no pacote de ícones do <span class="cor-p1">Iconify Twotone</span>, baseado no <span class="cor-p1">Google Material Design.</span></p>
+                <img fadeInDown data-anime="1900" src="./img/14-design system/5-icones 1.jpg" alt="icones">
             </div>
 
             <div class="p-proj-sobre cor-3">
-                <h1 fadeInDown data-anime="600">Padrões de Botões</h1>
-                <p fadeInDown data-anime="700">Os botões foram pensados em <span class="cor-p1">2 tamanhos</span>, normal (H=36px) e pequeno (H=28px), com variações entre todas as cores da paleta de cores do Design System.</p>
-                <img fadeInDown data-anime="800" src="./img/14-design system/6-botoes 1.jpg" alt="botoes">
+                <h1 fadeInDown data-anime="2000">Padrões de Botões</h1>
+                <p fadeInDown data-anime="2100">Os botões foram pensados em <span class="cor-p1">2 tamanhos</span>, normal (H=36px) e pequeno (H=28px), com variações entre todas as cores da paleta de cores do Design System.</p>
+                <img fadeInDown data-anime="2200" src="./img/14-design system/6-botoes 1.jpg" alt="botoes">
             </div>
         </main>
 
