--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                 <p fadeInDown data-anime="700">O primeiro passo para resolver um problema, é torna-lo claro. Só depois conseguimos trabalhar na solução.</p>
             </div>
           <div>
-            <p fadeInDown data-anime="800">Olá, meu nome é Carlos David, tenho 32 anos sou um formado em Arquitetura e Urbanismo, com 10 anos de experiência na construção civil, com Especialização em de Experiência do Usuário e atualmente me especializando em Metodologias Ágeis e cursando a Graduação em Design Gráfico. Sendo muito apaixonado por interfaces e por resolver problemas, agora estou trabalhando como <SPAN style="color:#f8f0a7";>Web Designer</SPAN> e <SPAN style="color:#f8f0a7";>UX/UI Designer Freelancer</SPAN>.</p> 
+            <p fadeInDown data-anime="800">Olá, meu nome é Carlos David, tenho 33 anos sou um formado em Arquitetura e Urbanismo, com 10 anos de experiência na construção civil, com Especialização em de Experiência do Usuário e atualmente me especializando em Metodologias Ágeis e cursando a Graduação em Design Gráfico. Sendo muito apaixonado por interfaces e por resolver problemas, agora estou trabalhando como estagiário de  <SPAN style="color:#f8f0a7";>Web Design</SPAN>,<SPAN style="color:#f8f0a7";>UX/UI Design</SPAN> e <SPAN style="color:#f8f0a7";>Design Gráfico</SPAN> na Girafa Ecommerce.</p> 
           </div>         
           
         </section>
@@ -78,9 +78,7 @@
                         <li><a href="./sobre.html"><img src="./img/17-sobre/icons/4-illustrator.svg" width="200" height="200" alt="Illustrator">Illustrator</a></li>                    
                         <li><a href="./sobre.html"><img src="./img/17-sobre/icons/5-html.svg" width="200" height="200" alt="HTML">HTML</a></li>
                         <li><a href="./sobre.html"><img src="./img/17-sobre/icons/6-css.svg" width="200" height="200" alt="CSS">CSS</a></li>
-                        <li><a href="./sobre.html"><img src="./img/17-sobre/icons/7-javascript.svg" width="200" height="200" alt="javascript">javascript</a></li>
-                        <li><a href="./sobre.html"><img src="./img/17-sobre/icons/9-PHP-logo 1.svg" width="200" height="200" alt="PHP">PHP</a></li> 
-                        <li><a href="./sobre.html"><img src="./img/17-sobre/icons/8-Wordpress-Logo 1.svg" width="200" height="200" alt="Wordpress">Wordpress</a></li>                         
+                        <li><a href="./sobre.html"><img src="./img/17-sobre/icons/7-javascript.svg" width="200" height="200" alt="javascript">javascript</a></li>                                               
                     </ul>
                 </div>                           
         </section>
@@ -106,7 +104,11 @@
                             <div>
                                 <h2 fadeInDown data-anime="1600">UX/UI Design</h2>
                                 <p>O termo em inglês UX (User Experience) significa “experiência do usuário” e é a relação de uma pessoa com a experiência de um produto ou serviço.</p> 
-                            </div>                            
+                            </div>
+                            <div>
+                                <h2 fadeInDown data-anime="1600">Design Gráfico</h2>
+                                <p>Design gráfico é a arte de comunicar visualmente, combinando elementos como imagens, texto e cores para transmitir uma mensagem ou conceito.</p> 
+                            </div>                             
                         </div>
                         <div class="p-chamada-servico">
                             <p>Para saber mais sobre as metodologias usadas, clique abaixo</p> 
