--- a/redes-sociais.html
+++ b/redes-sociais.html
@@ -32,19 +32,19 @@
         </header>
 
         <main class="proj-pg-bg">
-            <div class="proj-pg-intro cor-3">
+            <div class="proj-pg-intro cor-3" data-anime="100">
                 <div>
-                    <h1 fadeInDown data-anime="100">Redes Sociais</h1>
+                    <h1>Redes Sociais</h1>
                 </div>
                 <img src="./img/18-redes-sociais/banner-redes-s-1.jpg" alt="banner" fadeInDown data-anime="200">
             </div>
             
-            <div class="p-proj-sobre cor-3">                    
+            <div class="p-proj-sobre cor-3" data-anime="200">                    
                 <h1 fadeInDown data-anime="400">As Postagens</h1>
                 <p fadeInDown data-anime="500">Aqui, serão postados alguns trabalhos gráficos desenvolvidos para redes sociais.</p>
             </div>
 
-            <div class="p-proj-desenv cor-3">      
+            <div class="p-proj-desenv cor-3" data-anime="300">      
                 <img src="./img/18-redes-sociais/Bolos-Deliciosos.jpg" alt="Logo" fadeInDown data-anime="800">
                 <img src="./img/18-redes-sociais/Fashion.jpg" alt="Logo" fadeInDown data-anime="800">
                 <img src="./img/18-redes-sociais/Hamburguer-do-dia.jpg" alt="Logo" fadeInDown data-anime="800">
