--- a/servicos.html
+++ b/servicos.html
@@ -109,6 +109,38 @@
                     </div>        
                 </div>
 
+                <div class="servicos-ux cor-3"> 
+                    <div class="servicos-ux-intro">                  
+                        <h1 fadeInDown data-anime="900">Design Gráfico</h1>
+                        <img src="./img/15-servicos/6-theme-design-graffico.jpg" alt="Imagem Web Design" fadeInDown data-anime="1000">
+                    </div>
+                        <div class="servicos-ux-conteudo">
+                            <div class="servicos-ux-texto" fadeInDown data-anime="1100">
+                                <h2>Etapas e Entregas</h2>
+                                <h3>• Briefing com o cliente</h3>
+                                <p>Como nas outras áreas, a conversa com o cliente é um ponto chave e usada para fazer um levantamento das demandas do cliente, onde serão estudadas datas, etapas e entregas.</p>
+                                <h3>• Empatia</h3>
+                                <p>A primeira fase do Design Thinking é a Empatia, que é o processo de entender o usuário e suas necessidades. Nesta fase, a equipe deve realizar pesquisas e entrevistas com usuários. Observar seus comportamentos e identificar suas necessidades, desejos e desafios. Esta fase é crucial para a compreensão do problema. E para a criação de soluções que atendam às necessidades reais do usuário.</p>
+                                <h3>• Definição do problema</h3>
+                                <p>Após a fase de Empatia, a equipe deve definir o problema a ser resolvido.</p>
+                                <h3>• Ideação</h3>
+                                <p>A terceira fase do Design Thinking é a Ideação, que é o processo de gerar ideias para resolver o problema.</p>
+                                <h3>• Prototipagem</h3>
+                                <p>O objetivo da fase de Prototipagem é testar as soluções para identificar possíveis problemas e refiná-las.</p>
+                                <h3>• Teste</h3>
+                                <p>Processo de apresentação das imagens ao cliente, afim de testá-las para aprová-las ou altera-las.</p>
+                            <ul fadeInDown data-anime="1200">
+                                <li>*Uma etapa só seguirá para outra, se o cliente aprovar.</li>                                
+                            </ul>
+                        </div>
+                            <div class="servicos-ux-img">
+                                <img src="./img/15-servicos/4-design-grafico.svg" alt="Icone Design grafico"fadeInDown data-anime="1300">
+                            </div>
+                        </div>
+                        
+                    </div>        
+                </div>
+
                 <div class="chamada-servico cor-3"fadeInDown data-anime="1400">
                     <h2>Quer saber mais?</h2>
                     <div class="botao">
