--- a/sobre.html
+++ b/sobre.html
@@ -35,7 +35,7 @@
             <div class="intro-bg" fadeInDown data-anime="100">                
                 <div class="intro-conteudo cor-3" fadeInDown data-anime="100">                    
                     <h1 fadeInDown data-anime="200">Carlos David, UX/UI Designer</h1>                 
-                    <p fadeInDown data-anime="200">Olá, meu nome é Carlos David, tenho 32 anos sou um formado em Arquitetura e Urbanismo, com 10 anos de experiência na construção civil, com Especialização em de Experiência do Usuário e atualmente me especializando em Metodologias Ágeis e cursando a Graduação em Design Gráfico. Sendo muito apaixonado por interfaces e por resolver problemas, agora estou trabalhando como <SPAN style="color:#f8f0a7";>Web Designer</SPAN> e <SPAN style="color:#f8f0a7";>UX/UI Designer Freelancer</SPAN>.</p> 
+                    <p fadeInDown data-anime="200">Olá, meu nome é Carlos David, tenho 33 anos sou um formado em Arquitetura e Urbanismo, com 10 anos de experiência na construção civil, com Especialização em de Experiência do Usuário e atualmente me especializando em Metodologias Ágeis e cursando a Graduação em Design Gráfico. Sendo muito apaixonado por interfaces e por resolver problemas, agora estou trabalhando como estagiário de  <SPAN style="color:#f8f0a7";>Web Design</SPAN>,<SPAN style="color:#f8f0a7";>UX/UI Design</SPAN> e <SPAN style="color:#f8f0a7";>Design Gráfico</SPAN> na Girafa Ecommerce.</p> 
                 </div>                             
                 <div class="intro-img">
                     <img src="./img/17-sobre/images/1-foto carlos.jpg" alt="Foto Carlos" fadeInDown data-anime="200">
@@ -44,7 +44,7 @@
             </div>
 
             <div class="botao-sobre" fadeInDown data-anime="300">
-                <a class="botao" href="https://drive.google.com/file/d/1HX_ZSw73Z7lZ-z9-VY1oriRIR2JAzG-r/view?usp=sharing" target="_blank">Baixe o Currículo</a>
+                <a class="botao" href="https://docs.google.com/document/d/10tfN59UzDBiEFmxSDFGvUhBXoeKFEqCZ/edit?usp=sharing&ouid=112555455066981325156&rtpof=true&sd=true" target="_blank">Baixe o Currículo</a>
             </div>              
                    
         </main>
@@ -60,11 +60,26 @@
                 <h1 fadeInDown data-anime="400">Projetos principais</h1>
             </div>
             <div class="proj-links">
-                <ul class="proj-links cor-3" fadeInDown data-anime="400">
-                    <li><a href="./caravan.html"><img src="./img/17-sobre/images/7-caravan.jpg" width="260" height="150" alt="Caravan">Caravan</a></li>
-                    <li><a href="./xfarms.html"><img src="./img/10-xfarms/imagens/0 - xfarms - mini.jpg" width="260" height="150" alt="Xfarms">XFarms</a></li>
+                <ul class="proj-links cor-3" fadeInDown data-anime="400">                    
+                    <li><a href="./cartaz-cinema.html"><img src="./img/4.1-proj-des-grafico/imagens/1-proj-cinema.jpg" width="260" height="150" alt="Cartaz Cinema">Cartaz Cinema</a></li>
+                    <li><a href="./rest-mineiro.html"><img src="./img/4.1-proj-des-grafico/imagens/3-Moodboard.jpg" width="260" height="150" alt="Logotipo de Restaurante Mineiro">Logotipo de Restaurante Mineiro</a></li>
                     <li><a href="./drmichelangelo.html"><img src="./img/17-sobre/images/3-dr michelangelo.jpg" width="260" height="150" alt="Nion">Dr. Michelângelo</a></li>                    
                     <li><a href="./bikcraft.html"><img src="./img/17-sobre/images/4-bikcraft.jpg" width="260" height="150" alt="Bikcraft">Bikcraft</a></li>                    
+                </ul>
+            </div>
+        </section>
+
+         <div class="divisoria" fadeInDown data-anime="500"></div>
+
+        <section class="proj-bj">
+            <div class="proj-titulo cor-3">
+                <h1 fadeInDown data-anime="400">Projetos por áreas</h1>
+            </div>
+            <div class="proj-links">
+                <ul class="proj-links cor-3" fadeInDown data-anime="400">
+                    <li><a href="./proj-web-design.html"><img src="./img/17-sobre/icons/10-ar-web-design.svg" width="287" height="287" alt="web design">Web Design</a> </li>
+                    <li><a href="./proj-ux.html"><img src="./img/17-sobre/icons/11-ar-ux-ui.svg" width="202" height="100" alt="ux ui">UX/UI Design</a></li>
+                    <li><a href="./proj-des-grafico.html"><img src="./img/17-sobre/icons/12-ar-design-grafico.svg" width="275" height="275" alt="design grafico">Design Gráfico<a> <li>              
                 </ul>
             </div>
         </section>
@@ -75,19 +90,22 @@
         
         <section class="ferramentas-bj">
             <div class="ferramentas-titulo cor-3">
-                <h1 fadeInDown data-anime="600">Projetos por Ferramentas</h1>
+                <h1 fadeInDown data-anime="600">Habilidades</h1>
             </div>
             <div class="ferramentas-links">
                 <ul class="ferramentas-links cor-3" fadeInDown data-anime="700">
-                    <li><a href="./proj-xd-fig.html"><img src="./img/17-sobre/icons/1-adobe xd.svg" width="200" height="200" alt="AdobeXD">AdobeXD</a></li>
-                    <li><a href="./proj-xd-fig.html"><img src="./img/17-sobre/icons/2-figma.svg" width="200" height="200" alt="Figma">Figma</a></li>
-                    <li><a href="./proj-phot-ilus.html"><img src="./img/17-sobre/icons/3-photoshop.svg" width="200" height="200" alt="Photoshop">Photoshop</a></li>
-                    <li><a href="./proj-phot-ilus.html"><img src="./img/17-sobre/icons/4-illustrator.svg" width="200" height="200" alt="Illustrator">Illustrator</a></li>
-                    <li><a href="./proj-html-css.html"><img src="./img/17-sobre/icons/5-html.svg" width="200" height="200" alt="HTML">HTML</a></li>
-                    <li><a href="./proj-html-css.html"><img src="./img/17-sobre/icons/6-css.svg" width="200" height="200" alt="CSS">CSS</a></li>
-                    <li><a href="./proj-html-css.html"><img src="./img/17-sobre/icons/7-javascript.svg" width="200" height="200" alt="javascript">javascript</a></li>                                                       
-                    <li><a href="./proj-html-css.html"><img src="./img/17-sobre/icons/9-PHP-logo 1.svg" width="200" height="200" alt="PHP">PHP</a></li> 
-                    <li><a href="./proj-html-css.html"><img src="./img/17-sobre/icons/8-Wordpress-Logo 1.svg" width="200" height="200" alt="Wordpress">Wordpress</a></li>   
+                    <li><a href="./proj-ux.html"><img src="./img/17-sobre/icons/1-adobe xd.svg" width="200" height="200" alt="AdobeXD">AdobeXD</a></li>
+                    <li><a href="./proj-ux.html"><img src="./img/17-sobre/icons/2-figma.svg" width="200" height="200" alt="Figma">Figma</a></li>
+                    <li><a href="./proj-des-grafico.html"><img src="./img/17-sobre/icons/3-photoshop.svg" width="200" height="200" alt="Photoshop">Photoshop</a></li>
+                    <li><a href="./proj-des-grafico.html"><img src="./img/17-sobre/icons/4-illustrator.svg" width="200" height="200" alt="Illustrator">Illustrator</a></li>
+                    <li><a href="./proj-des-grafico.html"><img src="./img/17-sobre/icons/14-in-design.svg" width="200" height="200" alt="indesign">Adobe Indesign</a></li>  
+                    <li><a href="./proj-des-grafico.html"><img src="./img/17-sobre/icons/16-premier.svg" width="200" height="200" alt="premier">Adobe Premier</a></li>  
+                    <li><a href="./proj-web-design.html"><img src="./img/17-sobre/icons/5-html.svg" width="200" height="200" alt="HTML">HTML</a></li>
+                    <li><a href="./proj-web-design.html"><img src="./img/17-sobre/icons/6-css.svg" width="200" height="200" alt="CSS">CSS</a></li>
+                    <li><a href="./proj-web-design.html"><img src="./img/17-sobre/icons/7-javascript.svg" width="200" height="200" alt="javascript">Javascript</a></li>
+                    <li><a href="./proj-web-design.html"><img src="./img/17-sobre/icons/9-PHP-logo 1.svg" width="200" height="200" alt="PHP">PHP</a></li>
+                    <li><a href="./proj-web-design.html"><img src="./img/17-sobre/icons/8-Wordpress-Logo 1.svg" width="200" height="200" alt="Wordpress">Wordpress</a></li> 
+                    <li><a href="./proj-ux.html"><img src="./img/17-sobre/icons/15-miro.svg" width="200" height="200" alt="Wordpress">Miro</a></li>                    
                 </ul>
             </div>
         </section>
