--- a/proj-des-grafico.html
+++ b/proj-des-grafico.html
@@ -35,13 +35,20 @@
 
         <main class="tech-bg">
             <div class="tech-titulo cor-0">
-                <h1 fadeInDown data-anime="100">Projetos Por Tecnologias</h1>
+                <h1 fadeInDown data-anime="100">Projetos por Áreas - Design Gráfico</h1>
             <div>
+                <div class="tech-texto cor-3">
+                    <p fadeInDown data-anime="100">Design gráfico é a arte de comunicar visualmente, combinando elementos como imagens, texto e cores para transmitir uma mensagem ou conceito. </p>
+                </div>
             <div class="tech-programas cor-3"fadeInDown data-anime="200">
-                <ul>                    
-                    <li><a href="./proj-html-css.html"><img src="./img/17-sobre/icons/5-html.svg" width="200" height="200" alt="HTML">HTML</a></li>
-                    <li><a href="./proj-html-css.html"><img src="./img/17-sobre/icons/6-css.svg" width="200" height="200" alt="CSS">CSS</a></li>
-                    <li><a href="./proj-html-css.html"><img src="./img/17-sobre/icons/7-javascript.svg" width="200" height="200" alt="javascript">javascript</a></li>                                                             
+                <div class="projetos-titulo cor-0">
+                    <h1 fadeInDown data-anime="300">Programas e Tecnologias usadas</h1>
+                </div>
+                <ul>
+                    <li><a href="./proj-des-grafico.html"><img src="./img/17-sobre/icons/3-photoshop.svg" width="200" height="200" alt="Photoshop">Photoshop</a></li>
+                    <li><a href="./proj-des-grafico.html"><img src="./img/17-sobre/icons/4-illustrator.svg" width="200" height="200" alt="Illustrator">Illustrator</a></li>
+                    <li><a href="./proj-des-grafico.html"><img src="./img/17-sobre/icons/14-in-design.svg" width="200" height="200" alt="indesign">Adobe Indesign</a></li>  
+                    <li><a href="./proj-des-grafico.html"><img src="./img/17-sobre/icons/16-premier.svg" width="200" height="200" alt="premier">Adobe Premier</a></li>                                                             
                 </ul>
             </div>
 
@@ -52,12 +59,12 @@
                 <div class="projetos-titulo cor-0">
                     <h1 fadeInDown data-anime="300">Projetos</h1>
                 </div>            
-                    <ul class="projetos-lista cor-3"fadeInDown data-anime="400">
-                        <li><a href="./caravan.html"><img src="./img/17-sobre/images/7-caravan.jpg" width="260" height="150" alt="Caravan">Caravan</a></li> 
-                        <li><a href="./nion.html"><img src="./img/17-sobre/images/2-nion.jpg" width="260" height="150" alt="Nion">Nion Restaurante Japonês</a></li>                        
-                        <li><a href="./bikcraft.html"><img src="./img/17-sobre/images/4-bikcraft.jpg" width="260" height="150" alt="Nion">Bikcraft</a></li>
-                        <li><a href="./guessnumber.html"><img src="./img/6-projhtml/imagens/3-guessnumber.jpg" width="260" height="150" alt="Nion">GuessNumber</a></li>
-                        <li><a href="./devconverter.html"><img src="./img/6-projhtml/imagens/4-devconverter.jpg" width="260" height="150" alt="Nion">DevConverter</a></li>
+                    <ul class="projetos-lista cor-3"fadeInDown data-anime="400">                        
+                        <li><a href="./cartaz-cinema.html"><img src="./img/4.1-proj-des-grafico/imagens/1-proj-cinema.jpg" width="260" height="150" alt="Cartaz Cinema">Cartaz Cinema</a></li>
+                        <li><a href="./cartaz-teatro.html"><img src="./img/4.1-proj-des-grafico/imagens/2-proj-teatro.jpg" width="260" height="150" alt="Cartaz Teatro">Cartaz Teatro</a></li>
+                        <li><a href="./rest-mineiro.html"><img src="./img/4.1-proj-des-grafico/imagens/3-Moodboard.jpg" width="260" height="150" alt="Logotipo de Restaurante Mineiro">Logotipo de Restaurante Mineiro</a></li>
+                        <li><a href="./redes-sociais.html"><img src="./img/18-redes-sociais/chamada-redes.jpg" width="260" height="150" alt="Redes Sociais">Redes Sociais</a></li>          
+                     
                     </ul>                
             </div>
         </main>      
