--- a/proj-ux.html
+++ b/proj-ux.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Projetos Figma e Adobe XD</title>
+        <title>Projetos Photoshop e Illustrator</title>
         <meta name="description" content="Temos a solução digital para o seu negócio. Soluções em Web Design e UX/UI.">
 
         <link rel="icon" href="./img/favcon/favcon.svg" type="image/svg+xml">
@@ -35,31 +35,38 @@
 
         <main class="tech-bg">
             <div class="tech-titulo cor-0">
-                <h1 fadeInDown data-anime="100">Projetos Por Tecnologias</h1>
+                <h1 fadeInDown data-anime="100">Projetos por Áreas - UX/UI</h1>
             <div>
+                <div class="tech-texto cor-3">
+                    <p fadeInDown data-anime="100">O termo em inglês UX (User Experience) significa “experiência do usuário” e é a relação de uma pessoa com a experiência de um produto ou serviço. </p>
+                </div>
             <div class="tech-programas cor-3"fadeInDown data-anime="200">
-                <ul>
-                    <li><a href="./proj-xd-fig.html"><img src="./img/17-sobre/icons/1-adobe xd.svg" width="200" height="200" alt="AdobeXD">AdobeXD</a></li>
-                    <li><a href="./proj-xd-fig.html"><img src="./img/17-sobre/icons/2-figma.svg" width="200" height="200" alt="Figma">Figma</a></li>                                        
+                <div class="projetos-titulo cor-0">
+                    <h1 fadeInDown data-anime="300">Programas e Tecnologias usadas</h1>
+                </div>
+                <ul> 
+                    <li><a href="./proj-ux.html"><img src="./img/17-sobre/icons/1-adobe xd.svg" width="200" height="200" alt="AdobeXD">AdobeXD</a></li>
+                    <li><a href="./proj-ux.html"><img src="./img/17-sobre/icons/2-figma.svg" width="200" height="200" alt="Figma">Figma</a></li>
+                    <li><a href="./proj-ux.html"><img src="./img/17-sobre/icons/15-miro.svg" width="200" height="200" alt="Wordpress">Miro</a></li>                    
                 </ul>
             </div>
 
             <div class="divisoria-pg"></div>
            
-
+            <section>
             <div class="projetos-links">
                 <div class="projetos-titulo cor-0">
                     <h1 fadeInDown data-anime="300">Projetos</h1>
                 </div>            
                     <ul class="projetos-lista cor-3"fadeInDown data-anime="400">
-                        <li><a href="./caravan.html"><img src="./img/17-sobre/images/7-caravan.jpg" width="260" height="150" alt="Caravan">Caravan</a></li>
-                        <li><a href="./xfarms.html"><img src="./img/10-xfarms/imagens/0 - xfarms - mini.jpg" width="260" height="150" alt="Xfarms">XFarms</a></li>
                         <li><a href="./nion.html"><img src="./img/17-sobre/images/2-nion.jpg" width="260" height="150" alt="Nion">Nion Restaurante Japonês</a></li>
                         <li><a href="./drmichelangelo.html"><img src="./img/17-sobre/images/3-dr michelangelo.jpg" width="260" height="150" alt="Nion">Dr. Michelângelo</a></li>
                         <li><a href="./bikcraft.html"><img src="./img/17-sobre/images/4-bikcraft.jpg" width="260" height="150" alt="Nion">Bikcraft</a></li>
+                        <li><a href="./xfarms.html"><img src="./img/10-xfarms/imagens/0 - xfarms - mini.jpg" width="260" height="150" alt="Xfarms">XFarms</a></li>
                         <li><a href="./basedesignsystem.html"><img src="./img/4-projxd/imagens/card-design-sistem.jpg" width="260" height="150" alt="Nion">Base Design System</a></li>
                     </ul>                
             </div>
+            </section>
         </main>      
 
         <footer class="footer-bg">
