--- a/proj-web-design.html
+++ b/proj-web-design.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Projetos Photoshop e Illustrator</title>
+        <title>Projetos Figma e Adobe XD</title>
         <meta name="description" content="Temos a solução digital para o seu negócio. Soluções em Web Design e UX/UI.">
 
         <link rel="icon" href="./img/favcon/favcon.svg" type="image/svg+xml">
@@ -35,32 +35,39 @@
 
         <main class="tech-bg">
             <div class="tech-titulo cor-0">
-                <h1 fadeInDown data-anime="100">Projetos Por Tecnologias</h1>
+                <h1 fadeInDown data-anime="100">Projetos por Áreas - Web Design</h1>                
             <div>
+                <div class="tech-texto cor-3">
+                    <p fadeInDown data-anime="100">O web design é uma extensão da prática do design gráfico, onde o foco do projeto é a criação de web sites e documentos disponíveis no ambiente da Internet.</p>
+                </div>
             <div class="tech-programas cor-3"fadeInDown data-anime="200">
-                <ul>                    
-                    <li><a href="./proj-phot-ilus.html"><img src="./img/17-sobre/icons/3-photoshop.svg" width="200" height="200" alt="Photoshop">Photoshop</a></li>
-                    <li><a href="./proj-phot-ilus.html"><img src="./img/17-sobre/icons/4-illustrator.svg" width="200" height="200" alt="Illustrator">Illustrator</a></li>
+                <div class="projetos-titulo cor-0">
+                    <h1 fadeInDown data-anime="300">Programas e Tecnologias usadas</h1>
+                </div>  
+                <ul>
+                    <li><a href="./proj-web-design.html"><img src="./img/17-sobre/icons/5-html.svg" width="200" height="200" alt="HTML">HTML</a></li>
+                    <li><a href="./proj-web-design.html"><img src="./img/17-sobre/icons/6-css.svg" width="200" height="200" alt="CSS">CSS</a></li>
+                    <li><a href="./proj-web-design.html"><img src="./img/17-sobre/icons/7-javascript.svg" width="200" height="200" alt="javascript">Javascript</a></li>
+                    <li><a href="./proj-web-design.html"><img src="./img/17-sobre/icons/9-PHP-logo 1.svg" width="200" height="200" alt="PHP">PHP</a></li>
+                    <li><a href="./proj-web-design.html"><img src="./img/17-sobre/icons/8-Wordpress-Logo 1.svg" width="200" height="200" alt="Wordpress">Wordpress</a></li>                                      
                 </ul>
             </div>
 
             <div class="divisoria-pg"></div>
            
-            <section>
+
             <div class="projetos-links">
                 <div class="projetos-titulo cor-0">
                     <h1 fadeInDown data-anime="300">Projetos</h1>
                 </div>            
                     <ul class="projetos-lista cor-3"fadeInDown data-anime="400">
+                        <li><a href="./caravan.html"><img src="./img/17-sobre/images/7-caravan.jpg" width="260" height="150" alt="Caravan">Caravan</a></li>                        
                         <li><a href="./nion.html"><img src="./img/17-sobre/images/2-nion.jpg" width="260" height="150" alt="Nion">Nion Restaurante Japonês</a></li>
-                        <li><a href="./drmichelangelo.html"><img src="./img/17-sobre/images/3-dr michelangelo.jpg" width="260" height="150" alt="Nion">Dr. Michelângelo</a></li>
                         <li><a href="./bikcraft.html"><img src="./img/17-sobre/images/4-bikcraft.jpg" width="260" height="150" alt="Nion">Bikcraft</a></li>
-                        <li><a href="./xfarms.html"><img src="./img/10-xfarms/imagens/0 - xfarms - mini.jpg" width="260" height="150" alt="Xfarms">XFarms</a></li>                       
-                        <li><a href="./redes-sociais.html"><img src="./img/18-redes-sociais/chamada-redes.jpg" width="260" height="150" alt="Xfarms">Redes Sociais</a></li>
-                        <li><a href="./caravan.html"><img src="./img/17-sobre/images/7-caravan.jpg" width="260" height="150" alt="Caravan">Caravan</a></li>
+                        <li><a href="./guessnumber.html"><img src="./img/11-guessnumber/imagens/guessnumber-pq.jpg" width="260" height="150" alt="Nion">GuessNumber</a></li>
+                        <li><a href="./devconverter.html"><img src="./img/12-devconverter/imagens/devconverter-pq.jpg" width="260" height="150" alt="Nion">DevConverter</a></li>
                     </ul>                
             </div>
-            </section>
         </main>      
 
         <footer class="footer-bg">
